base/htp/ingress-middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qb-strip
  namespace: htpc

spec:
  stripPrefix:
    prefixes:
      - /qb

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qb-redirect
  namespace: htpc

spec:
  redirectRegex:
    regex: ^(.*)/qb$
    replacement: $1/qb/

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qb-headers
  namespace: htpc
spec:
  headers:
    customRequestHeaders:
      X-Frame-Options: "SAMEORIGIN"

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: plex-redirect
  namespace: htpc

spec:
  redirectRegex:
    regex: ^(.*)/plex$
    replacement: $1/web/

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ipallowlist
spec:
  ipAllowList:
    sourceRange:
      - 127.0.0.1/32
      - 10.0.1.0/24
      - 10.0.2.0/24
