base/htp/volumes_patch.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: transmission
# spec:
#   template:
#     spec:
#       volumes: 
#       - hostPath: 
#           path: /opt/htpc 
#           type: DirectoryOrCreate 
#         name: htpc-home
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/htpc 
          type: DirectoryOrCreate 
        name: htpc-home
      - hostPath: 
          path: /media/seagate/incoming
        name: htpc-media-incoming
      - hostPath:
          path: /media/seagate/plex/movies
        name: htpc-media-movies
      - hostPath: 
          path: /media/seagate/plex/sports
        name: htpc-media-sports
      - hostPath: 
          path: /media/seagate/plex/leaving-soon
        name: htpc-media-leaving-soon
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/htpc 
          type: DirectoryOrCreate 
        name: htpc-home
      - hostPath: 
          path: /media/seagate2/tv-incoming
        name: htpc-media-incoming
      - hostPath: 
          path: /media/seagate2/plex/tv
        name: htpc-media-tv
      - hostPath:
          path: /media/seagate/plex/movies
        name: htpc-media-movies
      - hostPath: 
          path: /media/seagate/plex/sports
        name: htpc-media-sports
      - hostPath: 
          path: /media/seagate/plex/leaving-soon
        name: htpc-media-leaving-soon
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: lidarr
# spec:
#   template:
#     spec:
#       volumes: 
#       - hostPath: 
#           path: /opt/htpc 
#           type: DirectoryOrCreate 
#         name: htpc-home
#       - hostPath: 
#           path: /media/seagate2/incoming
#         name: htpc-media-incoming
#       - hostPath: 
#           path: /media/seagate/music
#         name: htpc-media-music
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: slskd
# spec:
#   template:
#     spec:
#       volumes: 
#       - hostPath: 
#           path: /opt/htpc 
#           type: DirectoryOrCreate 
#         name: htpc-home
#       - hostPath: 
#           path: /media/seagate2/incoming
#         name: htpc-media-incoming
#       - hostPath: 
#           path: /media/seagate/music
#         name: htpc-media-music
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: soularr
# spec:
#   template:
#     spec:
#       volumes: 
#       - hostPath: 
#           path: /opt/htpc 
#           type: DirectoryOrCreate 
#         name: htpc-home
#       - hostPath: 
#           path: /media/seagate2/incoming
#         name: htpc-media-incoming
#       - hostPath: 
#           path: /media/seagate/music
#         name: htpc-media-music
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  template:
    spec:
      volumes: 
      - hostPath: 
          path: /opt/htpc 
          type: DirectoryOrCreate 
        name: htpc-home
      - hostPath: 
          path: /media/seagate2/plex/tv
        name: htpc-media-tv
      - hostPath:
          path: /media/seagate/plex/movies
        name: htpc-media-movies
      - hostPath: 
          path: /media/seagate/plex/sports
        name: htpc-media-sports
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  template:
    spec:
      volumes:
      - hostPath:
          path: /opt/htpc
          type: DirectoryOrCreate
        name: htpc-home
      - hostPath: 
          path: /media/seagate2/plex/tv
        name: htpc-media-tv
      - hostPath:
          path: /media/seagate/plex/movies
        name: htpc-media-movies
      - hostPath: 
          path: /media/seagate/plex/sports
        name: htpc-media-sports
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
spec:
  template:
    spec:
      volumes:
      - hostPath:
          path: /opt/htpc
          type: DirectoryOrCreate
        name: htpc-home
      - hostPath: 
          path: /media/seagate2/incoming
        name: htpc-media-incoming-tv
      - hostPath: 
          path: /media/seagate/incoming
        name: htpc-media-incoming-movies
      - hostPath: 
          path: /media/seagate2/plex/tv
        name: htpc-media-tv
      - hostPath:
          path: /media/seagate/plex/movies
        name: htpc-media-movies
      - hostPath: 
          path: /media/seagate/plex/sports
        name: htpc-media-sports
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  template:
    spec:
      volumes:
      - hostPath:
          path: /opt/htpc/jellyfin
          type: DirectoryOrCreate
        name: jellyfin-home
      - hostPath: 
          path: /media/seagate2/plex/tv
        name: htpc-media-tv
      - hostPath:
          path: /media/seagate/plex/movies
        name: htpc-media-movies
      - hostPath: 
          path: /media/seagate/plex/sports
        name: htpc-media-sports
      - hostPath: 
          path: /media/seagate/music
        name: htpc-media-music
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
spec:
  template:
    spec:
      volumes:
      - hostPath:
          path: /opt/htpc
          type: DirectoryOrCreate
        name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  template:
    spec:
      volumes:
      - hostPath:
          path: /opt/htpc
          type: DirectoryOrCreate
        name: htpc-home
      - hostPath: 
          path: /media/seagate2/incoming
        name: htpc-media-incoming
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  template:
    spec:
      volumes:
      - hostPath:
          path: /opt/htpc
          type: DirectoryOrCreate
        name: htpc-home
      - hostPath: 
          path: /media/seagate2/plex/tv
        name: htpc-media-tv
      - hostPath:
          path: /media/seagate/plex/movies
        name: htpc-media-movies
      - hostPath: 
          path: /media/seagate/plex/sports
        name: htpc-media-sports
      - hostPath: 
          path: /media/seagate/music
        name: htpc-media-music
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraparr
spec:
  template:
    spec:
      volumes:
      - hostPath:
          path: /opt/htpc
          type: DirectoryOrCreate
        name: htpc-home
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: janitorr
spec:
  template:
    spec:
      volumes:
      - hostPath:
          path: /opt/htpc/janitorr/config
          type: DirectoryOrCreate
        name: janitorr-config
      - hostPath:
          path: /opt/htpc/janitorr/logs
          type: DirectoryOrCreate
        name: janitorr-logs
      - hostPath: 
          path: /media/seagate2/plex/tv
        name: htpc-media-tv
      - hostPath:
          path: /media/seagate/plex/movies
        name: htpc-media-movies
      - hostPath: 
          path: /media/seagate/plex/sports
        name: htpc-media-sports
      - hostPath: 
          path: /media/seagate/plex/leaving-soon
        name: htpc-media-leaving-soon
      - hostPath: 
          path: /media/seagate/plex
        name: htpc-media
