base/htp/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: htpc
spec:
  entryPoints:
    - web
    - websecure
  tls:
    certResolver: default
    domains:
      - main: "kouse.xyz"
        sans:
          - "*.kouse.xyz"
  routes:
  - kind: Rule
    match: '(!PathPrefix(`/metrics`) || ClientIP(`10.0.0.0/8`)) && Host(`jellyfin.kouse.xyz`)'
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: jellyfin
      namespace: "htpc"
      port: 8096
  - kind: Rule
    match: PathPrefix(`/sonarr`) || Host(`sonarr.kouse.xyz`)
    priority: 0
    services:
    - kind: Service
      name: sonarr
      namespace: "htpc"
      port: 8989
  - kind: Rule
    match: PathPrefix(`/radarr`) || Host(`radarr.kouse.xyz`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: radarr
      namespace: "htpc"
      port: 7878
  - kind: Rule
    match: Host(`bazarr.kouse.xyz`) && ClientIP(`10.0.0.0/8`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: bazarr
      namespace: "htpc"
      port: 6767
  - kind: Rule
    match: Host(`qbittorrent.kouse.xyz`) && ClientIP(`10.0.0.0/8`)
    # middlewares:
    #   - name: qb-strip
    #   - name: qb-redirect
    #   - name: qb-headers
    priority: 0
    services:
    - kind: Service
      name: qbittorrent
      namespace: "htpc"
      port: 8080
      passHostHeader: false
  # - kind: Rule
  #   match: PathPrefix(`/transmission`)
  #   middlewares: []
  #   priority: 0
  #   services:
  #   - kind: Service
  #     name: transmission
  #     namespace: "htpc"
  #     port: 9091
  - kind: Rule
    match: Host(`prowlarr.kouse.xyz`) && ClientIP(`10.0.0.0/8`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: prowlarr
      namespace: "htpc"
      port: 9696
  - kind: Rule
    match: Host(`nzbget.kouse.xyz`) && ClientIP(`10.0.0.0/8`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: nzbget
      namespace: "htpc"
      port: 6789
  - kind: Rule
    match: PathPrefix(`/overseerr`) || Host(`overseerr.kouse.xyz`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: overseerr
      namespace: "htpc"
      port: 5055
  - kind: Rule
    match: PathPrefix(`/plex`) || Host(`plex.kouse.xyz`)
    priority: 0
    services:
    - kind: Service
      name: plex
      namespace: "htpc"
      port: 32400
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: qbittorrent
  namespace: "htpc"
spec:
  entryPoints:
  - torrenttcp
  routes:
  - match: HostSNI(`*`)
    middlewares: []
    priority: 0
    services:
    - name: qbittorrent
      namespace: "htpc"
      port: 55881
